--- a/3DCNN/Savio_3D_CNN.ipynb
+++ b/3DCNN/Savio_3D_CNN.ipynb
@@ -173,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if baseline = 0:\n",
+    "if baseline == 0:\n",
     "    if resolution == 256:\n",
     "        model_class = ConvNetScalarLabel256\n",
     "    if resolution == 64:\n",
